[package]
name = "phantom_whisperer"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
crc16 = "0.4"
crc = "3.2"
rodio = "0.13"
hound = "3.5.0"
serde_json = "1.0"
base64 = "0.22.1"
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
bytes = "1.0"
tempfile = "3.2"
rand = "0.8"
rustfft = "6.2.0"
num-complex = "0.4.3"


