[package]
name = "phantom_whisperer"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
crc = "3.2"
rodio = "0.13"
hound = "3.5.0"
serde_json = "1.0"
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
bytes = "1.0"
rustfft = "6.2.0"
num-complex = "0.4.3"
